@@ -1,3 +1,9 @@
+2000-10-23 23:29 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
+   * contrib/mysql/*.prg
+      * changes / fixes as needed :-)
+   * include/hbdbf.h
+      + added #pragma pack() for GCC under OS/2
+
 2000-10-23 14:00 UTC-0400 David G. Holm <dholm@jsd-llc.com>
    * include/hbver.h
      * Bumped revision code to "i" and date to 2000-10-23 in
